<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="viewModel"
			type="com.byoutline.kickmaterial.managers.ProjectItemViewModel"/>
	</data>

	<merge tools:showIn="@layout/project_grid_item_big">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/project_item_big_padding"
			android:paddingRight="@dimen/project_item_big_padding">


			<TextView
				android:id="@+id/project_item_big_gathered_money_tv"
				style="@style/ProjectItemLightWhite"
				android:layout_width="0dp"
				android:layout_weight="2"
				android:transitionName="@string/transition_gathered_money_amount"
				android:text="@{@string/gathered_format(viewModel.project.getGatheredAmount())}"
				tools:ignore="UnusedAttribute"
				tools:text="$132 999"/>

			<TextView
				android:id="@+id/project_item_big_backers_tv"
				style="@style/ProjectItemLightWhite"
				android:transitionName="@string/transition_backers_count"
				android:text="@{Integer.toString(viewModel.project.backers)}"
				tools:ignore="UnusedAttribute"
				tools:text="4 026"/>

			<TextView
				android:id="@+id/project_item_big_days_left"
				style="@style/ProjectItemLightWhite"
				android:transitionName="@string/transition_days_left"
				android:text="@{viewModel.getTimeLeft().value}"
				tools:ignore="UnusedAttribute"
				tools:text="9"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/project_item_big_padding"
			android:paddingRight="@dimen/project_item_big_padding">


			<TextView
				android:id="@+id/project_item_big_pledged_of_tv"
				style="@style/ProjectItemBoldValue.Normal.Light"
				android:layout_weight="2"
				android:text="@{@string/pledged_of(viewModel.project.getTotalAmount())}"
				android:transitionName="@string/transition_gathered_money_amount_label"
				tools:ignore="UnusedAttribute"/>

			<TextView
				android:id="@+id/project_item_big_backers_label_tv"
				style="@style/ProjectItemBoldValue.Normal.Light"
				android:text="@string/backers"
				android:transitionName="@string/transition_backers_count_label"
				tools:ignore="UnusedAttribute"/>

			<TextView
				android:id="@+id/project_item_time_left_type_tv"
				style="@style/ProjectItemBoldValue.Normal.Light"
				android:text="@{@string/days_left(viewModel.getTimeLeft().description)}"
				android:transitionName="@string/transition_days_left_label"
				tools:ignore="UnusedAttribute"/>

		</LinearLayout>
	</merge>
</layout>